--- a/docker/prometheus/Dockerfile
+++ b/docker/prometheus/Dockerfile
@@ -2,5 +2,6 @@ FROM prom/prometheus:latest
 
 COPY prometheus.yml /etc/prometheus/prometheus.yml
 
-# Arranca como root para evitar problemas de permisos
 USER root
+RUN chown -R 65534:65534 /etc/prometheus/prometheus.yml
+USER 65534
