--- a/docker/prometheus/prometheus.yml
+++ b/docker/prometheus/prometheus.yml
@@ -3,4 +3,4 @@ global:
 scrape_configs:
   - job_name: 'nestjs_app'
     static_configs:
-      - targets: ['host.docker.internal:3000']
+      - targets: ['api:3000']
