--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,19 @@ services:
     api:
         build: ./api
         container_name: nestjs-api
+        environment:
+            - NODE_ENV=production
+            - PORT=3000
+        restart: unless-stopped
         ports:
             - "3001:3000"
         networks:
             - observability-net
-        volumes:
-            - ./api:/usr/src/app
     prometheus:
         container_name: prometheus
         build:
             context: ./docker/prometheus
+        restart: unless-stopped
         ports:
             - "9090:9090"
         networks:
@@ -21,6 +24,7 @@ services:
         container_name: grafana
         build:
             context: ./docker/grafana
+        restart: unless-stopped
         ports:
             - "3002:3000"
         depends_on:
@@ -29,5 +33,6 @@ services:
             - observability-net
 networks:
     observability-net:
+        name: observability-net
         driver: bridge
 
